# thorvg.flutter

./: .gitignore  .gitmodules  CHANGELOG.md  CODEOWNERS  CONTRIBUTORS.md  README.md  ffigen.yaml  pubspec.yaml
android/: .gitignore  build.gradle
cross/: macos_arm64.txt  macos_x86_64.txt
example/: pubspec.yaml
example/android/: settings.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/org/thorvg/example/: MainActivity.kt
example/ios/Runner/: AppDelegate.swift  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Base.lproj/: MainMenu.xib
example/macos/Runner/Configs/: AppInfo.xcconfig
lib/: thorvg.dart
lib/src/: lottie.dart  thorvg.dart  thorvg_bindings_generated.dart  utils.dart
lottie/: flutter_build.android.sh  flutter_build.ios.sh  flutter_build.macos.sh  meson.build
macos/: thorvg.podspec
src/: tvgFlutterLottieAnimation.cpp  tvgFlutterLottieAnimation.h
